fixed bug where long words would overflow the tweet-top container

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -8,6 +8,7 @@ article {
 
 article p {
   font-weight: bold;
+  word-wrap: break-word;
 }
 
 article:hover {
